--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="Bierpong_Hausregeln_SchultzeVogt.pdf">Klicke hier für die Bierpong Regeln von Vogt & Schultze</a></p>
+  <p><a href="Bierpong_Hausregeln_SchultzeVogt.docx">Klicke hier für die Bierpong Regeln von Vogt & Schultze</a></p>
 </html>  
